--- a/Video-5 -Image,lists& tables/index.html
+++ b/Video-5 -Image,lists& tables/index.html
@@ -18,7 +18,7 @@
        
         <tr>
             <th colspan="2">Name</th>
-            <th>Deaignation</th>
+            <th>Designation</th>
             <th>Favourite language</th>
         </tr>
     </thead>
