--- a/video -7  Forms and input Tags in HTML/index.html
+++ b/video -7  Forms and input Tags in HTML/index.html
@@ -22,7 +22,7 @@
         </div>
         <div>
             <input type="checkbox" id="subscribe" name="suvbscibe" value="yes">
-            <label for="subscribe" male> subscribe to newsletter</label>
+            <label for="subscribe" > subscribe to newsletter</label>
             
         </div>
         <div>
