--- a/video 8- inline and block elements/index.html
+++ b/video 8- inline and block elements/index.html
@@ -12,7 +12,7 @@
     <div> Im a block elelment</div>
 
     <span> I am a span and I am inline not like div that is block</span>
-    <a href="">yes he is inline</a>
+    <a href="">yes he is inline like me</a>
 
 <!-- Quiz tym
     withou using a br tag, write a vertically aligned from asking for name, city and pincode of a user.-->
