--- a/Video 17 CSS Selectors, Masterclass/index.html
+++ b/Video 17 CSS Selectors, Masterclass/index.html
@@ -11,21 +11,21 @@
         }
         /* class selector */
         .red{
-            background-color: red;
+            background-color: rgb(0, 255, 106);
         }
         /* ID Selector */
         #green{
-            background-color: green;
+            background-color: rgb(81, 0, 128);
         }
         /* CHILD SELECTORS -- it means it should be a direct selector that means div should have p underneath directly*/
         div> P{
             color:blue ;
-            background-color: brown;
+            background-color: rgb(90, 142, 151);
         }
         /* DESCENDANT SELECTOR--- in this it does not matter, it can be direct or indirect. */
         div P{
-            color:blue ;
-            background-color: brown;
+            color:rgb(255, 217, 0) ;
+            background-color: rgb(196, 35, 35);
         }
         /* UNIVERSAL SELECTOR-- giving the spacing between the items it */
         *{
